test-stand-infra/host-lib/tests/snapshots/smoke_mock__disable_cts - parsed.snap
---
source: tests/smoke-mock.rs
expression: "&deser_msg"

---
SetPin(
    SetLevel {
        pin: Cts,
        level: High,
    },
)
