test-stand-infra/host-lib/tests/snapshots/smoke_mock__measure_pwm_signal - parsed.snap
---
source: tests/smoke-mock.rs
expression: "&deser_msg"

---
ReadPin(
    ReadLevel {
        pin: Pwm,
    },
)
