test-stand-infra/host-lib/tests/snapshots/smoke_mock__measure_timer_interrupt - parsed.snap
---
source: tests/smoke-mock.rs
expression: "&deser_msg"

---
ReadPin(
    ReadLevel {
        pin: Blue,
    },
)
