test-stand-infra/host-lib/tests/snapshots/smoke_mock__pin_is_high - bytes.snap
---
source: test-stand-infra/host-lib/tests/smoke-mock.rs
expression: "&msg"

---
[
    3,
    2,
    1,
    0,
]
