test-stand-infra/host-lib/tests/snapshots/smoke_mock__pin_is_high - parsed.snap
---
source: test-stand-infra/host-lib/tests/smoke-mock.rs
expression: "&deser_msg"

---
ReadPin(
    ReadLevel {
        pin: Green,
    },
)
