test-stand-infra/host-lib/tests/snapshots/smoke_mock__pin_is_low - parsed.snap
---
source: tests/smoke-mock.rs
expression: "&deser_msg"

---
ReadPin(
    ReadLevel {
        pin: Green,
    },
)
