test-stand-infra/host-lib/tests/snapshots/smoke_mock__send_to_target_usart - bytes.snap
---
source: tests/smoke-mock.rs
expression: "&msg"

---
[
    1,
    1,
    6,
    4,
    254,
    237,
    218,
    122,
    0,
]
