test-stand-infra/host-lib/tests/snapshots/smoke_mock__send_to_target_usart_dma - bytes.snap
---
source: tests/smoke-mock.rs
expression: "&msg"

---
[
    1,
    7,
    1,
    4,
    254,
    237,
    218,
    122,
    0,
]
