test-stand-infra/host-lib/tests/snapshots/smoke_mock__send_to_target_usart_dma - parsed.snap
---
source: tests/smoke-mock.rs
expression: "&deser_msg"

---
SendUsart {
    mode: Dma,
    data: [
        254,
        237,
        218,
        122,
    ],
}
