test-stand-infra/host-lib/tests/snapshots/smoke_mock__send_to_target_usart_sync - bytes.snap
---
source: tests/smoke-mock.rs
expression: "&msg"

---
[
    1,
    7,
    3,
    4,
    254,
    237,
    218,
    122,
    0,
]
